2011-03-18  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-java-utils-2): Add
	ejunit4() function.

2011-02-12  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-mount-boot): Add
	mount-boot eclass.
	(ebuild-mode-keywords-pam): Add pammod_hide_symbols() function.

2011-01-05  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-xfconf): Fix typo
	in variable name.

2011-01-04  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-ruby-fakegem):
	Add ruby_fakegem_install_gemspec(),
	ruby_fakegem_metadata_gemspec() functions
	(ebuild-mode-keywords-python):
	Add python_merge_intermediate_installation_images() function

2011-01-01  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eapi4)
	(ebuild-mode-keywords-functions-eapi4): New variables for keywords
	and functions of EAPI 4.
	(ebuild-mode-keywords-functions-default):
	Add default_src_install() function.

2010-12-12  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-gnome2-utils):
	Add gnome2_schemas_savelist(), gnome2_schemas_update() functions

2010-11-23  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-elisp-common):
	Add elisp-need-emacs function.

2010-11-04  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-darcs):
	Add darcs_patchcount() function

2010-10-25  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-texlive-common):
	Added texlive-common.eclass
	(ebuild-mode-keywords-deprecated): python_mod_compile() is deprecated
	(ebuild-mode-keywords-python): Add python_abi_depend() function

2010-10-24  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-texlive-module):
	Add texlive-module_synonyms_to_language_lua_line() and