@@ -639,6 +639,11 @@
      "version_format_string")
     font-lock-type-face))
 
+(defvar ebuild-mode-keywords-vmware-bundle
+  '(("vmware-bundle_extract-bundle-component" "vmware-bundle_extract-component"
+     "")
+    font-lock-type-face))
+
 ;; Local Variables:
 ;; coding: utf-8
 ;; fill-column: 78
